add delete save; change to java 23 methods